0.227 2023-10-16
  [Bug Fix]
    * Fix a bug that IO::Socket#connect method do not retry connect operation when a retry is needed.
  
  
0.226 2023-10-16
  [New Features]
    * Add V6Only option to IO::Socket::IP#init method.
  
  [Imcompatible Changes]
    * AutoFlush field is moved from IO::Handle to IO::File.
    * set_autoflush method is moved from IO::Handle to IO::File.
    * autoflush method is moved from IO::Handle to IO::File.
    * Default values of options for IO::Socket#init method are changed.
      
      Domain = 0
      
      Proto = 0
      
      Type = 0
      
      Listen = 0
    * The type of IO::Socket::IP#ReuseAddr becomes byte.
    * The type of IO::Socket::IP#ReusePort becomes byte.
    * The type of IO::Socket::IP#Broadcast becomes byte.
    
  [Document Improvement]
    * Improve docs for IO::Socket.
    * Add IO::open link to docs for IO::Dir class.
    * Add IO::opendir link to docs for IO::File class.
  [Document Fix]
    * Fix a doc that IO::Socket#close returned int type instead of void type.
    
0.225 2023-10-15
  [Requirement Changes]
    * Require SPVM 0.990021
  [Incompatibe Changes]
    * IO::Socket::IP#set_blocking method throw an exception if a true value is given.
    * IO::Socket::IP#new dose not set SOCK_RAW Type for IPPROTO_ICMP Proto. This is Perl's IO::Socket::IP compatible beheivior.
    
  [Document Improvement]
    * Improve docs for IO::Socket::IP
    * Improve docs for IO::Socket::IP::Import::IPv4.
    * Improve docs for IO::Socket::IP::Import::IPv6.
  [Test Improvement]
    * Add tests for IO::Socket::IP.
    
0.224 2023-10-11
  [Bug Fix]
    * Fix a bug that IO::Socket::INET does not call DESTROY method in IO::Socket.
    * Fix a bug that IO::Socket::INET6 does not call DESTROY method in IO::Socket.
    * Fix a bug that IO::Socket::UNIX does not call DESTROY method in IO::Socket.
  [Incompatible Changes]
    * The default value of LocalPort option becomes 0.
    * The default value of PeerPort option becomes 0.